--- a/Portfolio/src/Components/Navbar/Navbar.module.css
+++ b/Portfolio/src/Components/Navbar/Navbar.module.css
@@ -65,11 +65,11 @@
     align-items: center;
     gap: 13px;
     border-radius: 10px;
-    background: rgb(25, 55, 109);
+    background: rgb(33, 25, 109);
     background: linear-gradient(
       0deg,
-      rgba(25, 55, 109, 0.2) 0%,
-      rgba(25, 55, 109, 1) 100%
+      rgba(33, 25, 109, 0.2) 0%,
+      rgb(25, 92, 109) 100%
     );
     padding: 24px 33px;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
