--- a/Portfolio/src/Components/Hero/Hero.module.css
+++ b/Portfolio/src/Components/Hero/Hero.module.css
@@ -9,6 +9,7 @@
   z-index: 1;
   margin-left: 10%;
   margin-right: 10%;
+  padding-bottom: 100px;
 }
 
 .content {
@@ -27,7 +28,7 @@
   background: linear-gradient(
     90deg,
     rgba(255, 255, 255, 1) 70%,
-    rgba(255, 255, 255, 0) 120%
+    rgba(192, 10, 10, 0) 120%
   );
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -81,7 +82,7 @@
   top: -128px;
   left: -10vw;
   border-radius: 764px;
-  background: rgba(38, 25, 109, 0.7);
+  background: rgba(25, 55, 109, 0.7);
   filter: blur(100px);
   z-index: 0;
 }
@@ -95,7 +96,7 @@
   top: 246px;
   right: -25vw;
   border-radius: 764px;
-  background: rgba(33, 25, 109, 0.7);
+  background: rgba(25, 55, 109, 0.7);
   filter: blur(100px);
   z-index: 0;
 }
