Updated experience.jsx & experience.module.css

--- a/Portfolio/src/Components/Experience/experience.module.css
+++ b/Portfolio/src/Components/Experience/experience.module.css
@@ -95,9 +95,13 @@
 .historyItemDetails ul {
   margin-top: 6px;
   list-style-position: inside;
-  font-size: 25px;
+  font-size: 18px; /* Adjusted to a smaller font size */
   list-style-type: disc;
   margin-left: 17px;
+}
+
+.historyItemDetails ul li {
+  margin-bottom: 5px; /* Added some spacing between list items */
 }
 
 @media screen and (max-width: 830px) {
