--- a/Portfolio/src/vars.css
+++ b/Portfolio/src/vars.css
@@ -1,11 +1,11 @@
 :root {
-    /* Colours */
-    --color-text: #ffffff;
-    --color-primary: #6657bc;
-    --color-secondary: #21196d;
-    --color-dark: #1b0b47;
-    --color-bg: #0a042d;
-  
-    /* Fonts */
-    --font-roboto: "Roboto";
-  }
+  /* Colours */
+  --color-text: #fff;
+  --color-primary: #576cbc;
+  --color-secondary: #19376d;
+  --color-dark: #0b2447;
+  --color-bg: #04152d;
+
+  /* Fonts */
+  --font-roboto: "Roboto";
+}
