Add Contact section component with styles and responsive design

--- a/Portfolio/src/Components/Projects/Projects.module.css
+++ b/Portfolio/src/Components/Projects/Projects.module.css
@@ -1,7 +1,8 @@
 @import "../../vars.css";
 
 .container {
-  margin-top: 76px;
+  margin-top: 100px;
+  padding: 73px;
   color: var(--color-text);
   margin-left: 10%;
   margin-right: 10%;
