--- a/Portfolio/src/Components/About/About.module.css
+++ b/Portfolio/src/Components/About/About.module.css
@@ -2,7 +2,7 @@
 
 .container {
   position: relative;
-  background-color: rgba(12, 12, 12, 0.6);
+  background-color: var(--color-dark);
   border-radius: 15px;
   padding: 73px;
   margin-top: 129px;
