--- a/Portfolio/src/Components/Projects/ProjectCard.module.css
+++ b/Portfolio/src/Components/Projects/ProjectCard.module.css
@@ -39,7 +39,7 @@
   font-size: 25px;
   font-weight: 400;
   border-radius: 100px;
-  background: var(--color-dark);
+  background: var(--color-bg);
   padding: 2px 22px;
 }
 
