--- a/Portfolio/src/Components/Contacts/Contact.module.css
+++ b/Portfolio/src/Components/Contacts/Contact.module.css
@@ -2,66 +2,123 @@
 
 .container {
   color: var(--color-text);
-  background-color: var(--color-bg);
+  margin-top: 200px;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.title {
+  color: var(--color-text);
+  font-size: 35px;
+  font-weight: 700;
+  letter-spacing: 1.75px;
+  text-transform: uppercase;
+}
+
+.content {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 100vw;
-  height: 100vh; /* Ensure it takes the full viewport height */
-  padding: 58px 10%;
-  gap: 10px;
-  align-items: center; /* Center content vertically */
+  margin-top: 14px;
 }
 
-.text h2 {
-  font-size: 80px;
-  font-weight: 700;
-  letter-spacing: 4px;
+.contacts {
+  width: 45%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 37px;
 }
 
-.text p {
-  font-size: 40px;
-  font-weight: 400;
-  letter-spacing: 2px;
-}
-
-.links {
+.contact {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  list-style: none;
-  gap: 26px;
+  align-items: center;
+  gap: 11px;
 }
 
-.link {
+.contactImageContainer {
+  background-color: var(--color-secondary);
+  border-radius: 100%;
   display: flex;
   align-items: center;
-  gap: 25px;
+  justify-content: center;
+  width: 120px;
+  height: 120px;
 }
 
-.link a {
-  color: var(--color-text);
-  text-decoration: none;
+.contactImageContainer img {
+  width: 75px;
+}
+
+.contact p {
+  font-size: 25px;
+  font-family: var(--font-roboto);
+  font-weight: 500;
+}
+
+.history {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.historyItem {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 17px;
+  background: #19376d;
+  background: linear-gradient(90deg, #19376d 0%, rgba(25, 55, 109, 0) 100%);
+  border-radius: 10px;
+  padding: 24px;
+}
+
+.historyItem img {
+  width: 50px;
+}
+
+.historyItemDetails {
+  font-family: var(--font-roboto);
+}
+
+.historyItemDetails h3 {
   font-size: 30px;
-  font-weight: 400;
-  letter-spacing: 1.5px;
+  font-weight: 500;
+}
+
+.historyItemDetails p {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.historyItemDetails ul {
+  margin-top: 6px;
+  list-style-position: inside;
+  font-size: 18px; /* Adjusted to a smaller font size */
+  list-style-type: disc;
+  margin-left: 17px;
+}
+
+.historyItemDetails ul li {
+  margin-bottom: 5px; /* Added some spacing between list items */
 }
 
 @media screen and (max-width: 830px) {
-  .container {
-    flex-direction: column;
-    gap: 23px;
-    padding: 58px 5%;
-  }
-
-  .text {
-    display: flex;
+  .content {
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    gap: 34px;
   }
 
-  .links {
-    align-items: center;
+  .skills {
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .history {
+    width: 100%;
+    gap: 9px;
   }
 }
