--- a/Portfolio/src/Components/Hero/Hero.module.css
+++ b/Portfolio/src/Components/Hero/Hero.module.css
@@ -25,13 +25,14 @@
   font-weight: 900;
   margin-bottom: 33px;
   font-family: var(--font-roboto);
+  color: var(--color-text);
   background: linear-gradient(
     90deg,
     rgba(255, 255, 255, 1) 70%,
-    rgba(192, 10, 10, 0) 120%
+    rgba(255, 255, 255, 0.8) 120%
   );
-  -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .description {
@@ -104,9 +105,27 @@
 @media screen and (max-width: 830px) {
   .container {
     flex-direction: column-reverse;
+    padding: 20px;
+    margin-top: 0;
+  }
+
+  .heroImg {
+    width: 80%;
+    margin-bottom: 20px;
+  }
+
+  .title {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  .description {
+    font-size: 20px;
+    text-align: center;
   }
 
   .content {
     align-items: center;
+    padding: 0 20px;
   }
 }
