--- a/Portfolio/src/App.module.css
+++ b/Portfolio/src/App.module.css
@@ -3,6 +3,7 @@
 .App {
   background-color: var(--color-bg);
   width: 100%;
-  height: 100%;
-  /*overflow: hidden;*/
+  min-height: 100vh;
+  position: relative;
+  overflow-x: hidden; /* Prevent horizontal scroll */
 }
