--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -1,12 +1,17 @@
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: "Outfit", Arial, Helvetica, sans-serif;
-  }
-  
-  html {
+}
+
+html, body {
+    width: 100%;
+    min-height: 100vh;
+    overflow-x: hidden; /* Prevent horizontal scroll */
+}
+
+html {
     scroll-behavior: smooth;
-  }
+}
   
